<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/notes_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <include
       android:id="@+id/include"
       layout="@layout/app_bar"/>
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/noteList"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintTop_toBottomOf="@+id/include"
       app:layout_constraintBottom_toTopOf="@+id/view"
       tools:listitem="@layout/note_card"/>
   <View
       android:id="@+id/view"
       android:layout_width="match_parent"
       app:layout_constraintTop_toBottomOf="@+id/noteList"
       android:layout_height="1dp"
       app:layout_constraintBottom_toBottomOf="parent" />
   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/add_note_fab"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="end|bottom"
       android:layout_margin="@dimen/medium_margin"
       android:contentDescription="@string/add"
       app:borderWidth="0dp"
       app:backgroundTint="@color/lightGray"
       android:src="@drawable/ic_my_icon"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.954"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.894" />

</androidx.constraintlayout.widget.ConstraintLayout>