...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/parent_layout"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/deleteFab"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start|bottom"
            android:layout_marginBottom="@dimen/base_margin"
            android:src="@drawable/ic_delete"
            app:backgroundTint="@color/lightGray"
...
