<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trade_dialog"
    android:layout_width="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="@dimen/base_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_trade"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:fontFamily="@font/pro_bold"
            android:textSize="35sp"/>

        <EditText
            android:id="@+id/instrument_field"
            android:layout_marginTop="@dimen/base_margin"
            android:maxLength="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/enter_the_indicator"
            android:textSize="15sp"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/strategy_field"
            android:layout_marginTop="10sp"
            android:maxLength="8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/enter_the_strategy"
            android:textSize="15sp"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/daysSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginStart="@dimen/base_margin"
            android:entries="@array/weekDays"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:spinnerMode="dropdown" />
        <Spinner
            android:id="@+id/resultSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:entries="@array/results"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginStart="@dimen/base_margin"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:layout_weight="1" />
        <Spinner
            android:id="@+id/directionSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginStart="@dimen/base_margin"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:entries="@array/direction" />
        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/enter_a_description"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/MediumGray"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/card_radius"
                    android:text="@string/cancel" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_gravity="start"
                    android:backgroundTint="@color/MediumGray"
                    android:textColor="@color/white"
                    app:cornerRadius="@dimen/card_radius"
                    android:layout_marginStart="40dp"
                    android:text="@string/add"
                    />

        </LinearLayout>

</LinearLayout>