<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    style="@style/Background1"
    android:layout_height="match_parent"
    tools:context=".ui.trade.TradeFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/Date_card"
                android:layout_width="wrap_content"
                app:cardCornerRadius="4dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginEnd="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Background2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_weight="1"
                        android:textSize="@dimen/small_text_size"
                        android:fontFamily="@font/pro_bold"
                        android:gravity="center"
                        android:text="@string/date"
                        style="@style/TextGray" />
                    <ImageView
                        android:id="@+id/date_arrow"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:src ="@drawable/arrow"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/Strategy_card"
                android:layout_width="wrap_content"
                app:cardCornerRadius="4dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginEnd="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Background2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/pro_bold"
                        android:gravity="center"
                        android:textSize="@dimen/small_text_size"
                        android:text="@string/strategy"
                        style="@style/TextGray" />
                    <ImageView
                        android:id="@+id/strategy_arrow"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:src ="@drawable/arrow"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/instrument_card"
                android:layout_width="wrap_content"
                app:cardCornerRadius="4dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginEnd="@dimen/base_margin"
                android:layout_marginTop="@dimen/base_margin"
                android:layout_height="40dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/Background2"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_weight="1"
                        android:fontFamily="@font/pro_bold"
                        android:gravity="center"
                        android:textSize="@dimen/small_text_size"
                        android:text="@string/instrument"
                        style="@style/TextGray" />
                    <ImageView
                        android:id="@+id/instrument_arrow"
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/base_margin"
                        android:layout_marginEnd="@dimen/base_margin"
                        android:src ="@drawable/arrow"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/pro_regular"
                android:layout_marginStart="@dimen/base_margin"
                style="@style/TextGray"
                android:gravity="center_vertical"
                android:text="@string/direction"
               />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/pro_regular"
                android:layout_marginEnd="@dimen/medium_margin"
                style="@style/TextGray"
                android:gravity="center_vertical"
                android:text="@string/strategy"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/pro_regular"
                style="@style/TextGray"
                android:gravity="center"
                android:layout_marginEnd="@dimen/medium_margin"
                android:text="@string/result"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/pro_regular"
                android:layout_weight="1"
                style="@style/TextGray"
                android:gravity="center"
                android:text="@string/instrument"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="590dp"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="74dp"
            tools:listitem="@layout/list_item" />

        <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_trade_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/medium_margin"
        android:contentDescription="@string/add"
        app:borderWidth="0dp"
        app:backgroundTint="@color/lightGray"
        android:src="@drawable/ic_my_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />
</androidx.constraintlayout.widget.ConstraintLayout>