<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="strategy_sort_layout_id" type="id"/>
</resources>